--- a/packages/zoo/package.json
+++ b/packages/zoo/package.json
@@ -17,11 +17,43 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@capacitor/android": "^7.2.0",
+    "@capacitor/core": "^7.2.0",
+    "@capacitor/filesystem": "^7.0.1",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/react-router": "^1.120.16",
+    "@tanstack/react-router-devtools": "^1.120.16",
+    "classnames": "^2.5.1",
+    "concurrently": "^9.1.2",
+    "i18next": "^25.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
+    "react-redux": "^9.2.0",
+    "tailwindcss": "^4.1.5",
     "@tuskdesign/animals": "*",
     "@tuskdesign/names": "*"
   },
   "devDependencies": {
     "@types/node": "18.16.9",
-    "typescript": "~5.5.2"
+    "@capacitor/cli": "^7.2.0",
+    "@eslint/js": "^9.22.0",
+    "@tanstack/router-plugin": "^1.120.16",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "electron": "^36.1.0",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "prettier": "3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "sass": "^1.87.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.3.1"
   }
 }
